# Computergrafik-new

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  install_targets.cmake  start_target.bat.in  start_target.sh.in
A1_Versuch1a/: CMakeLists.txt  Versuch1a.cpp
A1_Versuch1a/shaders/: frag.spv  vert.spv
A1_Versuch1c/: CMakeLists.txt  Versuch1c.cpp
A3_Normalenvektoren/: A3_Normalenvektoren.cpp  CMakeLists.txt
A3_Normalenvektoren/shaders/: compile.bat  gouraud_frag.spv  gouraud_shader.frag  gouraud_shader.vert  gouraud_vert.spv  phong_vert.spv
A4_Cubemapping/: A4_Cubemapping.cpp  CMakeLists.txt
A4_Cubemapping/shaders/: compile.sh  scene.frag  scene.vert  scene_frag.spv  scene_vert.spv  skybox.frag  skybox_frag.spv  skybox_vert.spv
A4_Normalenvektoren/: A4_Normalenvektoren.cpp  CMakeLists.txt
A4_Normalenvektoren/shaders/: compile.bat  compile.sh  gouraud_frag.spv  gouraud_shader.frag  gouraud_shader.vert  gouraud_vert.spv  phong_frag.spv  phong_shader.frag  phong_shader.vert
A5_PCSS/: A5_PCSS.cpp  CMakeLists.txt
A5_PCSS/shaders/: compile.bat  compile.sh  frag.spv  shader.frag  shader.vert  shadowmap.vert  shadowmap_frag.spv  shadowmap_vert.spv  vert.spv
A5_Raytracing/: A5_Raytracing.cpp  CMakeLists.txt
A5_Raytracing/shaders/: closesthit.rchit  closesthit.spv  compile.bat  compile.sh  lightmiss.spv  raymiss.spv
dependencies/imageloader/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h
dependencies/utils/: model.cpp
